--- a/testing.html
+++ b/testing.html
@@ -4,10 +4,10 @@
 <html lang="en" theme="White">
 <head>
 <meta charset="utf-8">
-<title>イザナミ (@$) · feds.lol</title>
-<meta property="og:title" content="イザナミ (@$) · feds.lol">
-<meta name="description" content="イザナミ">
-<meta property="og:description" content="イザナミ">
+<title>مدان · (@$)</title>
+<meta property="og:title" content="مدان  (@$) · Killa.lol">
+<meta name="description" content="مدان ">
+<meta property="og:description" content="مدان ">
 <meta name="twitter:card" content="summary">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#2F3136">
@@ -22,7 +22,7 @@
 <link href="assets/vendors/animation/animate.css" rel="stylesheet">
 <script src="./script.js" data-site="IHGLANPG" defer></script>
 <script nonce="241f2893-28aa-4e2e-aaef-bce2f9d63c18">(function(w,d){!function(f,g,h,i){f[h]=f[h]||{};f[h].executed=[];f.zaraz={deferred:[],listeners:[]};f.zaraz.q=[];f.zaraz._f=function(j){return function(){var k=Array.prototype.slice.call(arguments);f.zaraz.q.push({m:j,a:k})}};for(const l of["track","set","debug"])f.zaraz[l]=f.zaraz._f(l);f.zaraz.init=()=>{var m=g.getElementsByTagName(i)[0],n=g.createElement(i),o=g.getElementsByTagName("title")[0];o&&(f[h].t=g.getElementsByTagName("title")[0].text);f[h].x=Math.random();f[h].w=f.screen.width;f[h].h=f.screen.height;f[h].j=f.innerHeight;f[h].e=f.innerWidth;f[h].l=f.location.href;f[h].r=g.referrer;f[h].k=f.screen.colorDepth;f[h].n=g.characterSet;f[h].o=(new Date).getTimezoneOffset();if(f.dataLayer)for(const s of Object.entries(Object.entries(dataLayer).reduce(((t,u)=>({...t[1],...u[1]})))))zaraz.set(s[0],s[1],{scope:"page"});f[h].q=[];for(;f.zaraz.q.length;){const v=f.zaraz.q.shift();f[h].q.push(v)}n.defer=!0;for(const w of[localStorage,sessionStorage])Object.keys(w||{}).filter((y=>y.startsWith("_zaraz_"))).forEach((x=>{try{f[h]["z_"+x.slice(7)]=JSON.parse(w.getItem(x))}catch{f[h]["z_"+x.slice(7)]=w.getItem(x)}}));n.referrerPolicy="origin";n.src="/ventryshield/contents.js?z="+btoa(encodeURIComponent(JSON.stringify(f[h])));m.parentNode.insertBefore(n,m)};["complete","interactive"].includes(g.readyState)?zaraz.init():f.addEventListener("DOMContentLoaded",zaraz.init)}(w,d,"zarazData","script");})(window,document);</script></head>
-<body class="fedslol">
+<body class="killa.lol">
 <script>
 
 var TxtType = function (el, toRotate, period) {
@@ -361,18 +361,6 @@ window.onload = function () {
 <div class="flex justify-center items-center space-x-2">
 <h2 class="text-[20px] text-white font-semibold" style="color: #fff; background-image: url('https://media.discordapp.net/attachments/987149728800198686/991834200309248070/sparkle.gif');filter: drop-shadow(8px 8px 10px #ffffff);color:#ffffff;">مدان</h2>
 </div>
-								  <div class="badge">
-									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
-									<span class="badge-tooltiptext">Verified</span>
-								  </div>
-								
-
-                                  <div class="badge">
-									<img src="https://cdn.discordapp.com/emojis/970888425634938941.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Owner">
-									<span class="badge-tooltiptext">Owner</span>
-								  </div>
-</div>
-</div>
 <p class="text-sm">
 killa.lol/<em>$</em>
 </p>
@@ -386,6 +374,18 @@ killa.lol/<em>$</em>
 <span class="typewrite" data-period="2000" data-type='[ "Owner of Killa.lol"]'>
 <span class="wrap"></span>
 </span>
+</div>
+								  <div class="badge">
+									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
+									<span class="badge-tooltiptext">Verified</span>
+								  </div>
+								
+
+                                  <div class="badge">
+									<img src="https://cdn.discordapp.com/emojis/970888425634938941.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Owner">
+									<span class="badge-tooltiptext">Owner</span>
+								  </div>
+</div>
 </p>
 </div>
 </div>
