--- a/testing.html
+++ b/testing.html
@@ -360,6 +360,9 @@ window.onload = function () {
 <div class="not-last-child:mb-8">
 <div class="flex justify-center items-center space-x-2">
 <h2 class="text-[20px] text-white font-semibold" style="color: #fff; background-image: url('https://media.discordapp.net/attachments/987149728800198686/991834200309248070/sparkle.gif');filter: drop-shadow(8px 8px 10px #ffffff);color:#ffffff;">مدان</h2>
+<p class="text-sm">
+killa.lol/<em>$</em>
+</p>
 </div>
 								  <div class="badge">
 									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
@@ -374,11 +377,11 @@ window.onload = function () {
 </div>
 </div>
 <p class="text-sm">
-killa.lol/<em>$</em>
+<em></em>
 </p>
 <p class="text-sm">
 <i class="ri-eye-2-fill"></i>
-561 </p>
+</p>
 </div>
 <div class="not-last-child:mb-8">
 <div class="mx-auto max-w-[750px]">
