--- a/testing.html
+++ b/testing.html
@@ -369,12 +369,24 @@ killa.lol/<em>$</em>
 									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
 									<span class="badge-tooltiptext">Verified</span>
 								  </div>
+								
 
-                  <div class="badge">
+                                  <div class="badge">
 									<img src="https://cdn.discordapp.com/emojis/970888425634938941.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Owner">
 									<span class="badge-tooltiptext">Owner</span>
 								  </div>
 </div>
+</div>
+<p class="text-sm">
+<em></em>
+</p>
+<p class="text-sm">
+<i class="ri-eye-2-fill"></i>
+</p>
+</div>
+<div class="not-last-child:mb-8">
+<div class="mx-auto max-w-[750px]">
+<p>
 <span class="typewrite" data-period="2000" data-type='[ "Owner of Killa.lol"]'>
 <span class="wrap"></span>
 </span>
