--- a/testing.html
+++ b/testing.html
@@ -361,10 +361,6 @@ window.onload = function () {
 <div class="flex justify-center items-center space-x-2">
 <h2 class="text-[20px] text-white font-semibold" style="color: #fff; background-image: url('https://media.discordapp.net/attachments/987149728800198686/991834200309248070/sparkle.gif');filter: drop-shadow(8px 8px 10px #ffffff);color:#ffffff;">مدان</h2>
 </div>
-<p class="text-sm">
-killa.lol/<em>$</em>
-</p>
-</div>
 								  <div class="badge">
 									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
 									<span class="badge-tooltiptext">Verified</span>
@@ -378,11 +374,11 @@ killa.lol/<em>$</em>
 </div>
 </div>
 <p class="text-sm">
-<em></em>
+killa.lol/<em>$</em>
 </p>
 <p class="text-sm">
 <i class="ri-eye-2-fill"></i>
-</p>
+666 </p>
 </div>
 <div class="not-last-child:mb-8">
 <div class="mx-auto max-w-[750px]">
@@ -401,6 +397,16 @@ killa.lol/<em>$</em>
 "></a>
 </div>
 </div>
+</div>
+</div>
+<div class="1w-full mx-auto card animate-slide-up not-last-child:mb-12 max-w-[1100px]">
+<div class="!p-0">
+<div class="flex flex-wrap justify-between gap-6">
+<a href="https://www.instagram.com/hiigreed" target="_blank" rel="noopener noreferrer nofollow" title="https://www.instagram.com/hiigreed" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
+<div class="flex items-center justify-between space-x-6">
+<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
+<img class="drop-shadow-instagram" src="https://feds.lol/module/newww/icons/instagram.svg">
+</span>
 </div>
 </div>
 </div>
