--- a/testing.html
+++ b/testing.html
@@ -389,6 +389,13 @@ window.onload = function () {
 							</div>
 							<span>discord</span>
 						  </div>
+
+              <div class="button doxbin" onclick="window.open('https://doxbin.com/user/Z5 ', '_blank');">
+							<div class="icon">
+								<i class="fab fa-doxbin"></i>
+							</div>
+							<span>doxbin</span>
+						  </div>
 						
 </div>
 <div class="flex justify-center items-center space-x-2">
