--- a/testing.html
+++ b/testing.html
@@ -116,7 +116,7 @@ window.onload = function () {
         float: left;
         margin: 0 5px;
         overflow: hidden;
-        background: rgb(135, 167, 250);
+        background: rgb(133, 133, 133);
         border-radius: 51px;
         cursor: pointer;
         box-shadow: 0px 10px 10px rgb(0, 0, 0);
@@ -392,7 +392,7 @@ window.onload = function () {
 
               <div class="button doxbin" onclick="window.open('https://doxbin.com/user/Z5 ', '_blank');">
 							<div class="icon">
-								<i class="fab fa-doxbin"></i>
+								<i class="fas fa-falink"></i>
 							</div>
 							<span>doxbin</span>
 						  </div>
@@ -401,9 +401,7 @@ window.onload = function () {
 <div class="flex justify-center items-center space-x-2">
 <div style="text-align: center;">
 <a href="https://discord.com/users/1000022273673138226" target="_blank">
-<img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="
-    width: 300px;
-"></a>
+<img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="width: 300px;"></a>
 </div>
 </div>
 </div>
