--- a/testing.html
+++ b/testing.html
@@ -116,7 +116,7 @@ window.onload = function () {
         float: left;
         margin: 0 5px;
         overflow: hidden;
-        background: rgb(133, 133, 133);
+        background: rgb(50, 50, 50);
         border-radius: 51px;
         cursor: pointer;
         box-shadow: 0px 10px 10px rgb(0, 0, 0);
@@ -392,7 +392,7 @@ window.onload = function () {
 
               <div class="button doxbin" onclick="window.open('https://doxbin.com/user/Z5 ', '_blank');">
 							<div class="icon">
-								<i class="fas fa-falink"></i>
+								<i class="fas fa-link"></i>
 							</div>
 							<span>doxbin</span>
 						  </div>
