--- a/testing.html
+++ b/testing.html
@@ -156,7 +156,7 @@ window.onload = function () {
         line-height: 60px;
         margin-left: 10px;
         transition: all 0.3s ease-out;
-        color: black;
+        color: rgb(255, 255, 255);
     }
 
     .footer p, h4, a {
