--- a/testing.html
+++ b/testing.html
@@ -392,7 +392,7 @@ window.onload = function () {
 
               <div class="button doxbin" onclick="window.open('https://doxbin.com/user/Z5 ', '_blank');">
 							<div class="icon">
-								<i class="fas fa-link"></i>
+                <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1054129127235518524/cdox.png" style="width: 35px; height: 35px;" alt="Owner">
 							</div>
 							<span>doxbin</span>
 						  </div>
