--- a/testing.html
+++ b/testing.html
@@ -363,6 +363,9 @@ window.onload = function () {
 <div class="flex justify-center items-center space-x-2">
 <h2 class="text-[20px] text-white font-semibold" style="color: #fff; background-image: url('https://media.discordapp.net/attachments/987149728800198686/991834200309248070/sparkle.gif');filter: drop-shadow(8px 8px 10px #ffffff);color:#ffffff;">مدان</h2>
 </div>
+<center><p class="text-sm">
+killa.lol/<em>$</em></center>
+</div>
 								  <div class="badge">
 									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
 									<span class="badge-tooltiptext">Verified</span>
