--- a/testing.html
+++ b/testing.html
@@ -364,7 +364,7 @@ window.onload = function () {
 <h2 class="text-[20px] text-white font-semibold" style="color: #fff; background-image: url('https://media.discordapp.net/attachments/987149728800198686/991834200309248070/sparkle.gif');filter: drop-shadow(8px 8px 10px #ffffff);color:#ffffff;">مدان</h2>
 </div>
 <center><p class="text-sm">
-killa.lol/<em>$</em></center>
+<em>killa.lol/$</em></center>
 </div>
 								  <div class="badge">
 									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
@@ -395,18 +395,15 @@ killa.lol/<em>$</em></center>
 
               <div class="button doxbin" onclick="window.open('https://doxbin.com/user/Z5 ', '_blank');">
 							<div class="icon">
-                <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1054129127235518524/cdox.png" style="width: 50px; height: 50px;" alt="Owner">
+                <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1054129127235518524/cdox.png" style="width: 60px; height: 60px;" alt="Owner">
 							</div>
 							<span>doxbin</span>
-						  </div>
-						
+						  </div>		
 </div>
 <div class="flex justify-center items-center space-x-2">
 <div style="text-align: center;">
 <a href="https://discord.com/users/1000022273673138226" target="_blank">
 <img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="width: 300px;"></a>
-</div>
-</div>
 </div>
 </div>
 </div>
