--- a/k.html
+++ b/k.html
@@ -296,9 +296,8 @@
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067157471543697438/1067164513931104256/E68E1AFD-31B7-4835-82AA-8DCA5C0A3C17.jpg">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">k y ë</h1>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">/k</h1>
 <p class="quote" style="color: #ffffff">
-Killa.lol/k
 </p>
 	                                                          </div>
 								
@@ -308,7 +307,6 @@ Killa.lol/k
 								  </div>
 								
     <p class="quote" style="color: #ffffff">
-        kyë#0001
     </p>
 </div>
 <div class="wrapper">
