--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!-- made by seized 
 credits to convicted :)-->
 <!DOCTYPE html>
@@ -26,7 +27,7 @@ credits to convicted :)-->
     <div id="enter"><b class="begin">click to enter</b></div>
     <div id="main">
 </div>
-
+<pre>   <a href="https://discord.gg/crucifix"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Credits
 	<center><h3>
 
         </h3><p class="hover">
