--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@ credits to convicted :)-->
     <div id="enter"><b class="begin">click to enter</b></div>
     <div id="main">
 </div>
-<pre>   <a href="https://discord.gg/ebio"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Credits
 	<center><h3>
 
         </h3><p class="hover">
 			<a href="https://discord.gg/twFV4jV2" class="hover">a private biolink service</a> 
+        </div>
+        </h3><p class="hover">
+			<a href="https://discord.gg/ebio" class="hover">Credits</a> 
 	<center>
         <script>
             function audioPlay() {
