--- a/testing.html
+++ b/testing.html
@@ -341,7 +341,7 @@ window.onload = function () {
 <div class="clickanywhere premium_border">
 <div class="click_body" style="height:100%;width:100%;">
 <div class="click_anywhere">
-<h4 style="color:white;font-size:12pt;">[Click Anywhere]</h4>
+<h4 style="color:white;font-size:12pt;">$</h4>
 </div>
 <audio>
 <source src="https://cdn.discordapp.com/attachments/1018078492585377823/1066000952177467472/Vitux_-_Deixa_Escondido_Speed_Official_Music.mp3" type="audio/mpeg">
@@ -374,6 +374,8 @@ window.onload = function () {
 									<span class="badge-tooltiptext">Owner</span>
 								  </div>
                 </div>
+<p class="text-sm">
+</em>killa.lol/$</em>
 <div class="wrapper">
     
 						  <div class="button other" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
