--- a/testing.html
+++ b/testing.html
@@ -198,176 +198,6 @@
 <!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
 <!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
 <!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
-<!---------U FUCKING SKID YO ASS DID "CTRL + U----------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en" theme="White">
 <head>
@@ -382,9 +212,10 @@
 <style>@import url('//fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');</style>
 <link href="../assets/images/verified.svg" rel="shortcut icon" type="image/x-icon">
 <meta name="twitter:card" content="summary">
-<link rel="preload" href="https://feds.lol/module/newww/css/app.css" as="style">
 <link href="https://northernsi.de/ebiofavicon.ico" rel="icon" type="image/x-icon"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet"/>
+<link rel="preload" href="https://feds.lol/module/newww/css/app.css" as="style">
+<link rel="stylesheet" href="https://feds.lol/module/newww/main.css">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 <link href="assets/vendors/animation/animate.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
