--- a/testing.html
+++ b/testing.html
@@ -578,14 +578,14 @@ window.onload = function () {
     
 						  <div class="button other" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
 							<div class="icon">
-                <img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061074169116229713/tele.png" style="width: 60px; height: 60px;" alt="Owner">
+                <i class="fas fa-link"></i>
 							</div>
 							<span>Roblox</span>
 						  </div>
 						
 						  <div class="button discord" onclick="window.open('https://dsc.gg/ico', '_blank');">
 							<div class="icon">
-                <img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061073995052630036/tele.png" style="width: 60px; height: 60px;" alt="Owner">
+                <i class="fab fa-discord"></i>
 							</div>
 							<span>discord</span>
 						  </div>
