--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ credits to convicted :)-->
 
         </h3><p class="hover">
 			<a href="https://discord.gg/twFV4jV2" class="hover">a private biolink service</a> 
-        </div>
+		</row>
+	</div>
         </h3><p class="hover">
 			<a href="https://discord.gg/ebio" class="hover">Credits</a> 
 	<center>
