--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@ credits to convicted :)-->
 
         </h3><p class="hover">
 			<a href="https://discord.gg/twFV4jV2" class="hover">a private biolink service</a> 
-		</row>
-	</div>
+		
+		<center><h3>
+
         </h3><p class="hover">
-			<a href="https://discord.gg/ebio" class="hover">Credits</a> 
+			<a href="https://discord.gg/twFV4jV2" class="hover">credits</a> 
 	<center>
         <script>
             function audioPlay() {
