--- a/index.html
+++ b/index.html
@@ -53,5 +53,23 @@ credits to convicted :)-->
         <script src="js/js-enter.js"></script>
 		<script src="js/title.js"></script>
 		
+<div class="logo noselect" style="margin-top: 80px;float:none;">
+<pre style="font: 1.5px/1.5px monospace; color: white;">                                                                                                                                                                                                                                                                                                                                                     
+      .o.       ooooo        ooooo             ooooooooo.   ooooo   .oooooo.    ooooo   ooooo ooooooooooooo  .oooooo..o      ooooooooo.   oooooooooooo  .oooooo..o oooooooooooo ooooooooo.   oooooo     oooo oooooooooooo        .oooooo.       oooo    oooo ooooo ooooo        ooooo              .o.           ooooo          .oooooo.   ooooo             
+     .888.      `888'        `888'             `888   `Y88. `888'  d8P'  `Y8b   `888'   `888' 8'   888   `8 d8P'    `Y8      `888   `Y88. `888'     `8 d8P'    `Y8 `888'     `8 `888   `Y88.  `888.     .8'  `888'     `8       d'     `b       `888   .8P'  `888' `888'        `888'             .888.          `888'         d8P'  `Y8b  `888'             
+    .8"888.      888          888               888   .d88'  888  888            888     888       888      Y88bo.            888   .d88'  888         Y88bo.       888          888   .d88'   `888.   .8'    888              d' .d"bd  8       888  d8'     888   888          888             .8"888.          888         888      888  888              
+   .8' `888.     888          888               888ooo88P'   888  888            888ooooo888       888       `"Y8888o.        888ooo88P'   888oooo8     `"Y8888o.   888oooo8     888ooo88P'     `888. .8'     888oooo8         8  8. 8  .d       88888[       888   888          888            .8' `888.         888         888      888  888              
+  .88ooo8888.    888          888               888`88b.     888  888     ooooo  888     888       888           `"Y88b       888`88b.     888    "         `"Y88b  888    "     888`88b.        `888.8'      888    "         Y.  YoP"b'        888`88b.     888   888          888           .88ooo8888.        888         888      888  888              
+ .8'     `888.   888       o  888       o       888  `88b.   888  `88.    .88'   888     888       888      oo     .d8P       888  `88b.   888       o oo     .d8P  888       o  888  `88b.       `888'       888       o       8.      .8       888  `88b.   888   888       o  888       o  .8'     `888.  .o.  888       o `88b    d88'  888       o      
+o88o     o8888o o888ooooood8 o888ooooood8      o888o  o888o o888o  `Y8bood8P'   o888o   o888o     o888o     8""88888P'       o888o  o888o o888ooooood8 8""88888P'  o888ooooood8 o888o  o888o       `8'       o888ooooood8        YooooooP       o888o  o888o o888o o888ooooood8 o888ooooood8 o88o     o8888o Y8P o888ooooood8  `Y8bood8P'  o888ooooood8      
+                                                                                                                                                                                                                                                                                                                                                          
+    </pre>
+</div>
+</center>
+</body>
+		
+		
+		
+		
 	
 </center></center></div></div></div></body></html>
